# vla

./: .gitattributes  .gitignore  .gitmessage  .vla_aliases  .vla_env_settings  250815-테스트 학습 코드 및 데이터셋 조정.md  250825_발표용_프로젝트_요약.md  2D_3D_ACTION_PERFORMANCE_COMPARISON.md  2D_ACTION_CONVERSION_SUMMARY.md  ACTION_HEAD_PERFORMANCE_ANALYSIS.md  ALIAS_FIX_FINAL.md  BILLY_API_REQUEST.md  BILLY_SERVER_START_GUIDE.md  BILLY_SETUP.md  BROWN_POT_DATA_COLLECTION_GUIDE.md  CHANGELOG_20251114.md  CODE_REVIEW_MOBILE_VLA_20251114.md  CODE_REVIEW_SUMMARY_20251114.md  COMMIT_MESSAGE_20251114.md  COMPATIBILITY_ISSUE_ANALYSIS_20251114.md  COMPREHENSIVE_MODEL_ANALYSIS.md  COMPREHENSIVE_MODEL_ANALYSIS_FINAL.md  COMPREHENSIVE_MODEL_COMPARISON_TABLE.md  COMPREHENSIVE_MODEL_FEATURES_TABLE.md  COMPREHENSIVE_MODEL_PERFORMANCE_RANKING.md  CURRENT_STATUS.md  DATASET_ANALYSIS.md  DATASET_DIVERSITY_ANALYSIS.md  DATA_COLLECTION_NOTES.md  DOCKER_DEPENDENCY_GUIDE.md  DOCKER_ENVIRONMENT_NOTES.md  DOCKER_JETSON_GUIDE.md  Dockerfile.jetson  Dockerfile.jp6  Dockerfile.mobile-vla  Dockerfile.mobile-vla-bsp-compatible  Dockerfile.mobile-vla-cuda12  Dockerfile.mobile-vla-final  Dockerfile.mobile-vla-jetson6  Dockerfile.mobile-vla-simple  (+264 more)
.agent/: README.md
5.robovlms_github/: README.md  meeting_materials.md
Legacy/Robo+/Mobile_VLA/docs/: PROJECT_SUMMARY.md  Professor_Evaluation_Report_20250821_014409.md  ROBOVLMS_MISSING_FEATURES.md  RoboVLMs_vs_Mobile_VLA_Comparison_20250821_021646.md  activate_env.sh  checkpoint_damage_analysis.py  jetson_tensorrt_quantization.py  model_comparison_analysis.md  pyproject.toml
Legacy/Robo+/Mobile_VLA/docs/core/: __init___core.py
Legacy/Robo+/Mobile_VLA/docs/docs/: ACTION_PARAMETER_COMPARISON.md  DETAILED_ANALYSIS_REPORT.md  ROBOT_SPECIFICATIONS.md  cursor_connection_error_troubleshooting.md
Legacy/Robo+/Mobile_VLA/docs/simple_gpu_quantized/: simple_gpu_model.onnx
Mobile_VLA/: .gitignore  FINAL_SUMMARY_20251106.md  IMPLEMENTATION_STATUS_20251106.md  README_LORA_FINETUNING.md  __init__.py  action_buffer.py  docker-compose-mobile-vla.yml  inference_api_server.py  inference_pipeline.py  inference_server.py  inference_server_dual.py  inference_server_v2.py  instruction_mapping.py  jetson_quick_start.sh  mobile_dataset_core.py  send_text_command.sh  train_mobile_vla.py  vla_control_utils.py
ROS_action/: ALTERNATIVE_SYNC_METHODS.md  CSV_TO_GUIDE_BRIEFING.md  DATASET_ANALYSIS_20251119.md  DATASET_COLLECTION_PLAN.md  DATASET_COLLECTION_STATUS.md  DATASET_COLLECTION_STATUS_20251127.md  DATASET_COLLECTION_STATUS_20251127_FINAL.md  DATASET_MOVED_TO_LEGACY_20251127.md  DATASET_RECOLLECTION_PLAN.md  DATASET_STATISTICS_20251119.md  DATASET_STRATEGY_ANALYSIS.md  Dockerfile.mobile-vla  FUNCTIONS_DOCUMENTATION.md  GPU_SERVER_SYNC.md  GUIDE_AUTO_SAVE_FIX_20251127.md  GUIDE_PATTERN_UPDATE_20251127.md  HARDWARE_ISSUE_A_KEY_MOVEMENT.md  MOBILE_VLA_USAGE_GUIDE.md  Mobile_VLA_System_Sequence.md  NETWORK_TOPOLOGY_SYNC.md  PATTERN_ANALYSIS_REPORT.md  QUICK_SYNC_COMMANDS.sh  README_ALIAS_USAGE.md  README_dataset_classifier.md  ROBOT_SERVER_ACCESS_OPTIONS.md  Readme.md  RoboVLMs_Analysis.md  SERVER_TO_SERVER_SYNC_GUIDE.md  STOP_MECHANISM.md  VLA_training_strategy_guide.md  analyze_basket_actions.py  analyze_basket_start_time.py  analyze_collection_period.py  analyze_color_quality.py  analyze_current_dataset_patterns.py  analyze_exact_patterns.py  analyze_h5_final.py  analyze_json_patterns.py  (+44 more)
ROS_action/src/camera_pub/: package.xml  setup.py
ROS_action/src/camera_pub/camera_pub/: camera_publisher_continuous.py  camera_publisher_usb.py  camera_publisher_usb_service.py  container_init.sh  container_run_enhanced.sh
ROS_action/src/mobile_vla_package/: package.xml  requirements.txt  setup.cfg  setup.py
ROS_action/src/mobile_vla_package/config/: mobile_vla.rviz
ROS_action/src/mobile_vla_package/launch/: launch_mobile_vla.launch.py  robovlms_system.launch.py
ROS_action/src/mobile_vla_package/mobile_vla_package/: DATASET_COLLECTION_CHANGES_20251104.md  DATASET_DESIGN.md  action_sequence_executor.py  api_client_node.py  mobile_vla_data_collector.py  mobile_vla_inference.py  mobile_vla_inference_node.py  robot_control_node.py  robovlms_controller.py  robovlms_inference.py  robovlms_monitor.py  ros_env_setup.py  simple_inference_test.py  simple_robot_mover.py  system_monitor.py  test_camera_simulator.py  test_monitor.py  vla_inference_node.py
RoboVLMs/: .gitignore  Dockerfile  README.md  README_ORIGINAL.md  RoboVLMs_종합_기술_문서.md  TEST_GUIDE.md  docker-compose.yml  git_safe_pull.sh  host_camera_test.py  inference_pipeline.py  launch_event_triggered_vla.sh  main.py  measure_memory_custom.py  paligemma_config.json  pyproject.toml  pyproject.toml.backup  robovlms_test.py  run_robovlms_test.sh  run_test.sh  setup_minuum_push.sh  stop_event_triggered_vla.sh  test1.py  vla_node.py  web_cam.py
RoboVLMs/.vlms/kosmos-2-patch14-224/: .gitattributes  README.md  generation_config.json  preprocessor_config.json  sentencepiece.bpe.model  tokenizer_config.json
RoboVLMs/configs/calvin_finetune/: inference_paligemma_mps.json
RoboVLMs/configs/mobile_vla/: train_mobile_vla_full_ft.json
RoboVLMs/configs/oxe_training/: finetune_kosmos_mobile_vla.json
RoboVLMs/core/critical_clarifications/: README.md  vlm_finetuning_purpose.md
RoboVLMs/core/todo_list/: mobile_vla_implementation_plan.md
RoboVLMs/docs/: MOBILE_VLA_GUIDE.md
RoboVLMs/install/: setup.sh
RoboVLMs/robovlms/data/: __init__.py  data_utils.py  mobile_vla_action_dataset.py  mobile_vla_h5_dataset.py
RoboVLMs/robovlms/model/: README.md  vlm_builder.py
RoboVLMs/robovlms/model/backbone/: base_backbone.py
RoboVLMs/robovlms/model/policy_head/: __init__.py  mobile_vla_policy.py
RoboVLMs/robovlms/train/: base_trainer.py
RoboVLMs/scripts/: camera_frames_container.py  camera_frames_host.py  run_mobile_vla_train.sh
RoboVLMs/tts/: Dockerfile  run_tts.py
RoboVLMs/vla_test/: README_STANDALONE.md  action_parser.py  standalone_vla_test.py  test_runner.py  vla_model_integration.py  vla_test_results.json
RoboVLMs/whisper/: whisper_test.py
(+4832 files in other folders)
