[tool.poetry]
name = "mobile-vla"
version = "1.0.0"
description = "Mobile VLA - Vision-Language-Action Model for Jetson"
authors = ["VLA Team"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

# Core dependencies (PyTorch는 수동 설치)
transformers = "4.41.2"
accelerate = "0.27.0"
numpy = "^1.24,<2.0"
pillow = "^10.0.0"
psutil = "^5.9.0"
tqdm = "^4.65.0"

# OpenCV는 시스템 버전 사용 (apt 설치)
# BitsAndBytes는 나중에 수동 설치

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ipython = "^8.14.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
