[tool.poetry]
name = "robovlms"
version = "0.0.1"
description = "RoboVLMs for Finetuning VLMs on Robot Data"
authors = ["minuum <minwool0357@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"

# [[tool.poetry.source]]
# name = "pytorch_cuda"
# url = "https://download.pytorch.org/whl/cu121"
# priority = "explicit"

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
torch = { path = "wheels/torch-2.3.0-cp310-cp310-linux_aarch64.whl" }
torchvision = { path = "wheels/torchvision-0.18.0a0+6043bc2-cp310-cp310-linux_aarch64.whl" }
torchaudio = { path = "wheels/torchaudio-2.3.0+952ea74-cp310-cp310-linux_aarch64.whl" }
pytorch-lightning = "^1.8.6"
pyyaml = "^6.0"
lightning = "^2.2.5"
lightning-utilities = "^0.8.0"
hydra-colorlog = "^1.2.0"
hydra-core = "^1.1.1"
deepspeed = "^0.15.0"
tensorboard = "^2.13.0"
tensorboardx = "^2.6.2"
tqdm = "^4.65.0"
transformers = "4.41.2"
diffusers = "^0.31.0"
wandb = "^0.19.0"
numpy = "<2.0"
sentence-transformers = "2.2.2"
open-clip-torch = "2.20.0"
datasets = "2.12.0"
# torchaudio = "2.1.0" # 기존 주석 처리된 부분 유지 또는 삭제 (새로운 torchaudio 명시)
opencv-python = "^4.11.0.86"
einops = "^0.8.1"
omegaconf = "^2.3.0"
timm = "^1.0.15"
accelerate = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
